--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,24 @@
-sonar.host.url = https://sonarcloud.io
-sonar.projectKey = OpenTX
-sonar.organization = opentx-github
+#sonar.host.url = https://sonarcloud.io
+#sonar.projectKey = OpenTX
+#sonar.organization = opentx-github
+#sonar.projectName = OpenTX
+#sonar.projectVersion = 2.2
+#sonar.sources = .
+#sonar.exclusions = sound/**, build/**, radio/src/thirdparty/**
+#sonar.cfamily.build-wrapper-output = bw_output
+
+sonar.projectKey=OpenI6X_opentx
+sonar.organization=openi6x
 sonar.projectName = OpenTX
-sonar.projectVersion = 2.2
 sonar.sources = .
 sonar.exclusions = sound/**, build/**, radio/src/thirdparty/**
-sonar.cfamily.build-wrapper-output = bw_output
 
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=opentx
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
