--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@
 #sonar.exclusions = sound/**, build/**, radio/src/thirdparty/**
 #sonar.cfamily.build-wrapper-output = bw_output
 
-sonar.projectKey=opentx
+sonar.projectKey=OpenI6X_opentx
 sonar.organization=openi6x
 sonar.projectName=OpenTX
 sonar.sources=.
