--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=openi6x
 sonar.projectName=OpenTX
 sonar.sources=.
 sonar.exclusions = sound/**, build/**, radio/src/thirdparty/**
-sonar.cfamily.build-wrapper-output = bw_output
+#sonar.cfamily.build-wrapper-output = bw_output
+sonar.cfamily.threads=2
