--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,19 @@ parameters:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  sonar-scan:
+    machine:
+      image: ubuntu-2004:202111-02
+    steps:
+      - checkout
+      - run:
+          name: Build
+          command: |
+            curl -L -O https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
+            unzip -o build-wrapper-linux-x86.zip
+            build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw_output ./tools/commit-tests.sh
+      - sonarcloud/scan
+
   build-elrsv2:
     machine:
       image: ubuntu-2004:202111-02
@@ -18,10 +31,10 @@ jobs:
      - run: |
          git rev-parse --short=8 HEAD > git_tag.txt
          docker run -it -e "BOARD_NAME=I6X" -e "CMAKE_FLAGS=PCB=I6X HELI=NO GVARS=YES LUA_COMPILER=NO MULTIMODULE=NO PPM_UNIT=PERCENT_PREC0 DEBUG=NO PCBI6X_ELRSV2=YES" -v $PWD:/opentx vitass/opentx-fw-build
-     - sonarcloud/scan
      - store_artifacts:
         path: opentx-i6x-<< pipeline.parameters.build-version >>.bin
         destination: openi6x-<< pipeline.parameters.build-version >>-elrsv2.bin
+
   build-standard:
     machine:
       image: ubuntu-2004:202111-02
@@ -33,6 +46,7 @@ jobs:
       - store_artifacts:
           path: opentx-i6x-<< pipeline.parameters.build-version >>.bin
           destination: openi6x-<< pipeline.parameters.build-version >>.bin
+
   build-heli:
     machine:
       image: ubuntu-2004:202111-02
@@ -64,8 +78,9 @@ orbs:
 workflows:
   openi6x-release-workflow:
     jobs:
-      - build-elrsv2:
+      - sonar-scan:
           context: SonarCloud
+      - build-elrsv2 #:
 #          filters:
 #            branches:
 #              only:
