--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             tar -C /tmp -xjf /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
             sudo mv /tmp/gcc-arm-none-eabi-4_7-2013q3 /opt/gcc-arm-none-eabi
             rm /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
+            export PATH=$PATH:/opt/gcc-arm-none-eabi/bin
             curl -L -O https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
             unzip -o build-wrapper-linux-x86.zip
             build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw_output ./tools/commit-tests.sh
