--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,11 @@ jobs:
             sudo mv /tmp/gcc-arm-none-eabi-4_7-2013q3 /opt/gcc-arm-none-eabi
             rm /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
             export PATH=$PATH:/opt/gcc-arm-none-eabi/bin
-            ls -la ~
+            source ~/.bashrc
             wget https://bootstrap.pypa.io/get-pip.py
             python3 get-pip.py
             pip3 install pillow libclang-py3 pyqt5
-            apt-get install -y libclang-3.9-dev
+            sudo apt-get install -y libclang-3.9-dev
             curl -L -O https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
             unzip -o build-wrapper-linux-x86.zip
             build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw_output ./tools/commit-tests.sh
