--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,15 @@ jobs:
     steps:
      - checkout
      - run: |
-         git rev-parse --short=8 HEAD > git_tag.txt
-         docker run -it -e "BOARD_NAME=I6X" -e "CMAKE_FLAGS=PCB=I6X HELI=NO GVARS=YES LUA_COMPILER=NO MULTIMODULE=NO PPM_UNIT=PERCENT_PREC0 DEBUG=NO PCBI6X_ELRSV2=YES" -v $PWD:/opentx vitass/opentx-fw-build
+         wget https://launchpad.net/gcc-arm-embedded/4.7/4.7-2013-q3-update/+download/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2 -P /tmp
+         tar -C /tmp -xjf /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
+         export PATH=$PATH:/tmp/gcc-arm-none-eabi-4_7-2013q3/bin
+         pip3 install pillow libclang-py3 pyqt5
+         sudo apt-get update -y
+         sudo apt-get install -y libclang-6.0-dev
+         curl -L -O https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
+         unzip -o build-wrapper-linux-x86.zip
+         build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw_output ./tools/build-flysky.sh -Wno-error
      - store_artifacts:
         path: opentx-i6x-<< pipeline.parameters.build-version >>.bin
         destination: openi6x-<< pipeline.parameters.build-version >>-elrsv2.bin
