--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,7 @@ jobs:
          pip3 install pillow libclang-py3 pyqt5
          sudo apt-get update -y
          sudo apt-get install -y libclang-6.0-dev
-         curl -L -O https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
-         unzip -o build-wrapper-linux-x86.zip
-         build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw_output ./tools/build-flysky.sh -Wno-error
+         python ./tools/build-flysky.py
      - store_artifacts:
         path: opentx-i6x-<< pipeline.parameters.build-version >>.bin
         destination: openi6x-<< pipeline.parameters.build-version >>-elrsv2.bin
