--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
          wget https://launchpad.net/gcc-arm-embedded/4.7/4.7-2013-q3-update/+download/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2 -P /tmp
          tar -C /tmp -xjf /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
          export PATH=$PATH:/tmp/gcc-arm-none-eabi-4_7-2013q3/bin
-         pip3 install pillow libclang-py3 pyqt5
+         pip3 install pillow libclang-py3 pyqt5 future
          sudo apt-get update -y
          sudo apt-get install -y libclang-6.0-dev
          python ./tools/build-flysky.py
@@ -90,8 +90,8 @@ orbs:
 workflows:
   openi6x-release-workflow:
     jobs:
-      - sonar-scan:
-          context: SonarCloud
+#      - sonar-scan:
+#          context: SonarCloud
       - build-elrsv2 #:
 #          filters:
 #            branches:
@@ -100,14 +100,14 @@ workflows:
 #              ignore: /.*/
 #            tags:
 #              only: /openi6x-*$/
-      - build-standard #:
+#      - build-standard #:
 #          filters:
 #            branches:
 #              only: /master$/
 #              ignore: /.*/
 #            tags:
 #              only: /openi6x-*$/
-      - build-heli #:
+#      - build-heli #:
 #          filters:
 #            branches:
 #              only: /master$/
