--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,10 @@ jobs:
          wget https://launchpad.net/gcc-arm-embedded/4.7/4.7-2013-q3-update/+download/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2 -P /tmp
          tar -C /tmp -xjf /tmp/gcc-arm-none-eabi-4_7-2013q3-20130916-linux.tar.bz2
          export PATH=$PATH:/tmp/gcc-arm-none-eabi-4_7-2013q3/bin
-         pip3 install pillow libclang-py3 pyqt5 future
+         pip3 install pillow libclang-py3 pyqt5
          sudo apt-get update -y
          sudo apt-get install -y libclang-6.0-dev
-         python3 ./tools/build-flysky.py -bI6X -tEN
+         python3 ./tools/build-flysky.py -bI6X -tEN ./
      - store_artifacts:
         path: opentx-i6x-<< pipeline.parameters.build-version >>.bin
         destination: openi6x-<< pipeline.parameters.build-version >>-elrsv2.bin
