--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           pip3 install pillow libclang-py3 pyqt5
           sudo apt-get update
           sudo apt-get install -y libclang-6.0-dev
-          python3 ./tools/build-flysky.py -bI6X-ELRSV2 -tALL /home/circleci/project/
+          python3 ./tools/build-flysky.py -bI6X_ELRSV2 -tALL /home/circleci/project/
       - store_artifacts:
           path: output
 
@@ -50,7 +50,7 @@ jobs:
           pip3 install pillow libclang-py3 pyqt5
           sudo apt-get update
           sudo apt-get install -y libclang-6.0-dev
-          python3 ./tools/build-flysky.py -bI6X-HELI -tALL /home/circleci/project/
+          python3 ./tools/build-flysky.py -bI6X_HELI -tALL /home/circleci/project/
       - store_artifacts:
           path: output
 
@@ -82,7 +82,7 @@ jobs:
           pip3 install pillow libclang-py3 pyqt5
           sudo apt-get update
           sudo apt-get install -y libclang-6.0-dev
-          python3 ./tools/build-flysky.py -bI6X-ELRSV2 -bI6X-HELI -bI6X -tEN /home/circleci/project/
+          python3 ./tools/build-flysky.py -bI6X_ELRSV2 -bI6X_HELI -bI6X -tEN /home/circleci/project/
       - store_artifacts:
           path: output
 
