--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
           pip3 install pillow libclang-py3 pyqt5
           sudo apt-get update
           sudo apt-get install -y libclang-6.0-dev
-          python3 ./tools/build-flysky.py -bI6X_ELRSV2_BACKLIGHT_MOD -bI6X_HELI -bI6X -tPL /home/circleci/project/
+          python3 ./tools/build-flysky.py -bI6X_ELRSV2_BACKLIGHT_MOD -bI6X_HELI -bI6X -tEN /home/circleci/project/
       - store_artifacts:
           path: output
 
