Flysky Gimbal implementation for the FS-i6X, this this is possible thanks to the work of Janek, by enabling the idle callback function for UART4

--- a/radio/src/targets/flysky/CMakeLists.txt
+++ b/radio/src/targets/flysky/CMakeLists.txt
@@ -136,6 +136,7 @@ set(TARGET_SRC
   i2c_driver.cpp
   crc_driver.cpp
   ../common/arm/stm32/mixer_scheduler_driver.cpp
+  ../common/arm/stm32/flysky_gimbal_driver.cpp
   )
 
 set(FIRMWARE_TARGET_SRC
