Added DFPlayer driver, integrated with buzzer driver, enabled Play Value and Play Track special functions,

--- a/radio/src/targets/flysky/CMakeLists.txt
+++ b/radio/src/targets/flysky/CMakeLists.txt
@@ -5,6 +5,7 @@ option(PCBI6X_INAV "Enable INAV Lite telemetry screen" NO) # ~2kB
 option(PCBI6X_USB_VBUS "Remove manual USB connection, just auto using VBUS, requires wiring USB VBUS to PA15 pad" NO)
 option(PCBI6X_BACKLIGHT_MOD "Enable adjustable backlight, requires wiring BL pad to PC9 pad" NO)
 option(AFHDS2A_LQI_CH "Send RSSI at channel 1-17" 17)
+option(DFPLAYER "Enables DFPlayer on AUX2 TX" NO)
 
 if(PCB STREQUAL I6X)
   set(PWR_BUTTON "SWITCH" CACHE STRING "Pwr button type (PRESS/SWITCH)")
@@ -53,9 +54,13 @@ if(FLYSKY_GIMBAL STREQUAL YES)
     )
 endif()
 
-if(DFPLAYER STREQUAL YES)
-  add_definitions(-DDFPLAYER)
-endif()
+# if(DFPLAYER STREQUAL YES)
+#   add_definitions(-DDFPLAYER)
+#   set(TARGET_SRC
+#   ${TARGET_SRC}
+#   dfplayer_driver.cpp
+#   )
+# endif()
 
 if(PCBI6X_BACKLIGHT_MOD STREQUAL YES)
   add_definitions(-DPCBI6X_BACKLIGHT_MOD)
