exclude USB mass storge mode for DFPlayer + ELRS

--- a/radio/src/targets/flysky/CMakeLists.txt
+++ b/radio/src/targets/flysky/CMakeLists.txt
@@ -90,8 +90,8 @@ set(TARGET_SRC
   )
 endif()
 
-if((DFPLAYER STREQUAL YES) AND (NOT PCBI6X_ELRS STREQUAL YES))
-add_definitions(-DPCBI6X_USB_MSD) # 3620B
+if(NOT((DFPLAYER STREQUAL YES) AND (PCBI6X_ELRS STREQUAL YES)))
+add_definitions(-DPCBI6X_USB_MSD) # 3.2kB
 endif()
 
 set(TARGET_SRC
