added SBUS_TRAINER define to make it build time option

--- a/radio/src/targets/flysky/CMakeLists.txt
+++ b/radio/src/targets/flysky/CMakeLists.txt
@@ -109,6 +109,7 @@ set(TARGET_SRC
   )
 
 add_definitions(-DSBUS)
+# add_definitions(-DSBUS_TRAINER) # ~520B
 set(PULSES_SRC
   ${PULSES_SRC}
   ../sbus.cpp
